--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,6 +135,11 @@ nav h1 {
     margin-top: 60px;
 }
 
+.font-15 {
+    color: white;
+
+}
+
 
 .mb-30 {
     margin-bottom: 30px;
@@ -285,81 +290,12 @@ a {
     height: 50px;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.min-vh-50 {
+    min-height: 50vh;
+}
+.top50{
+    top: 6%;
+}
 
 
 
@@ -442,9 +378,6 @@ a {
         width: 100% !important;
     }
 
-    a {
-        font-size: 5px;
-    }
 
     section .container .row .col-3 .d-flex a {
         color: blue;
@@ -466,6 +399,16 @@ a {
 
     .tac {
         text-align: center;
+    }
+
+}
+
+@media (max-width:568px) {
+    .col-3 {
+        width: 50%;
+        padding-left: 12px;
+        padding-right: 12px;
+        display: flex;
     }
 
 }
