--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@
     box-sizing: border-box;
     list-style: none;
     scroll-behavior: smooth;
+
 }
 
 a {
@@ -18,7 +19,7 @@ a {
 
 
 section header nav h1 span {
-    font-family: Poppins;
+    font-family: "Poppins", sans-serif;
     font-size: 26px;
     font-weight: 200;
     line-height: 30.16px;
@@ -27,7 +28,7 @@ section header nav h1 span {
 }
 
 .chat {
-    font-family: Poppins;
+    font-family: "Poppins", sans-serif;
     font-size: 26px;
     font-weight: 600;
     line-height: 30.16px;
@@ -37,13 +38,15 @@ section header nav h1 span {
 }
 
 nav ul li a {
-    font-family: Roboto;
+      font-family: "Poppins", sans-serif;
     font-size: 14px;
     font-weight: 500;
     line-height: 16.41px;
     text-align: right;
     color: white;
 }
+
+
 
 .bg-color {
     background-color: #1E71FF;
@@ -58,7 +61,7 @@ nav ul li a {
 }
 
 nav ul li button {
-    font-family: Roboto;
+      font-family: "Poppins", sans-serif;
     font-size: 14px;
     font-weight: 500;
     line-height: 16.41px;
@@ -72,6 +75,10 @@ nav ul li button {
 
 }
 
+.pb-450 {
+    padding-bottom: 450px;
+}
+
 nav h1 {
     color: white;
 }
@@ -82,7 +89,7 @@ nav h1 {
     border-radius: 60px;
     border: 1px solid #FFFFFF;
     background-color: #1E71FF;
-    font-family: Roboto;
+      font-family: "Poppins", sans-serif;
     font-size: 16px;
     font-weight: 500;
     line-height: 18.75px;
@@ -102,7 +109,7 @@ nav h1 {
 }
 
 .have {
-    font-family: Poppins;
+    font-family: "Poppins", sans-serif;
     font-size: 75px;
     font-weight: 600;
 
@@ -150,7 +157,7 @@ section .container .row .col-6 a {
 }
 
 .fonts-h1 {
-    font-family: Poppins;
+    font-family: "Poppins", sans-serif;
     font-size: 45px;
     font-weight: 500;
     line-height: 57.78px;
@@ -159,7 +166,7 @@ section .container .row .col-6 a {
 }
 
 .font-p {
-    font-family: Roboto;
+      font-family: "Poppins", sans-serif;
     font-size: 18px;
     font-weight: 400;
     line-height: 29.11px;
@@ -179,7 +186,7 @@ section .container .row .col-6 a {
     border-radius: 60px;
     border: 1px solid #1E71FF;
     color: #1E71FF;
-    font-family: Roboto;
+      font-family: "Poppins", sans-serif;
     font-size: 17px;
     font-weight: 500;
     line-height: 19.92px;
@@ -203,7 +210,7 @@ section .container .row .col-6 a {
 
 .bus-52 {
 
-    font-family: Roboto;
+      font-family: "Poppins", sans-serif;
     font-size: 18px;
     font-weight: 700;
     line-height: 29.11px;
@@ -212,7 +219,7 @@ section .container .row .col-6 a {
 }
 
 .appp {
-    font-family: Poppins;
+    font-family: "Poppins", sans-serif;
     font-size: 26px;
     font-weight: 200;
     line-height: 30.16px;
@@ -223,7 +230,7 @@ section .container .row .col-6 a {
 }
 
 .app-chat {
-    font-family: Poppins;
+    font-family: "Poppins", sans-serif;
     font-size: 26px;
     font-weight: 600;
     line-height: 30.16px;
@@ -252,7 +259,7 @@ section .container .row .col-6 a {
 }
 
 .app {
-    font-family: Poppins;
+    font-family: "Poppins", sans-serif;
     font-size: 26px;
     font-weight: 200;
     line-height: 30.16px;
@@ -271,7 +278,7 @@ section .container .row .col-3 .d-flex a {
 
 section .container .row .col-3 .box .footer-fonts {
     color: #6B7278;
-    font-family: Roboto;
+      font-family: "Poppins", sans-serif;
     font-size: 15px;
     font-weight: 400;
     line-height: 24.25px;
@@ -293,8 +300,27 @@ a {
 .min-vh-50 {
     min-height: 50vh;
 }
-.top50{
+
+.top50 {
     top: 6%;
+}
+
+.pb-100 {
+    padding-bottom: 100px;
+}
+
+.color {
+    color: #6B7278 !important;
+}
+
+.footer-texts {
+    bottom: -150%;
+    font-family: "Roboto", sans-serif;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 21.02px;
+    color: #6B7278;
+
 }
 
 
@@ -361,7 +387,7 @@ a {
     }
 
     .footer-h1 {
-        font-family: Poppins;
+        font-family: "Poppins", sans-serif;
         font-size: 26px;
         font-weight: 600;
         line-height: 30.16px;
@@ -399,6 +425,16 @@ a {
 
     .tac {
         text-align: center;
+    }
+
+    .lg-pb-0 {
+        padding-bottom: 0;
+    }
+
+    .footer-texts {
+        position: unset !important;
+        text-align: center;
+
     }
 
 }
