--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ section header nav h1 span {
 }
 
 nav ul li a {
-      font-family: "Poppins", sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 14px;
     font-weight: 500;
     line-height: 16.41px;
@@ -61,7 +61,7 @@ nav ul li a {
 }
 
 nav ul li button {
-      font-family: "Poppins", sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 14px;
     font-weight: 500;
     line-height: 16.41px;
@@ -89,7 +89,7 @@ nav h1 {
     border-radius: 60px;
     border: 1px solid #FFFFFF;
     background-color: #1E71FF;
-      font-family: "Poppins", sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 16px;
     font-weight: 500;
     line-height: 18.75px;
@@ -166,7 +166,7 @@ section .container .row .col-6 a {
 }
 
 .font-p {
-      font-family: "Poppins", sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 18px;
     font-weight: 400;
     line-height: 29.11px;
@@ -186,7 +186,7 @@ section .container .row .col-6 a {
     border-radius: 60px;
     border: 1px solid #1E71FF;
     color: #1E71FF;
-      font-family: "Poppins", sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 17px;
     font-weight: 500;
     line-height: 19.92px;
@@ -210,7 +210,7 @@ section .container .row .col-6 a {
 
 .bus-52 {
 
-      font-family: "Poppins", sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 18px;
     font-weight: 700;
     line-height: 29.11px;
@@ -278,12 +278,13 @@ section .container .row .col-3 .d-flex a {
 
 section .container .row .col-3 .box .footer-fonts {
     color: #6B7278;
-      font-family: "Poppins", sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 15px;
     font-weight: 400;
     line-height: 24.25px;
 }
-.max-583{
+
+.max-583 {
     max-width: 583px;
 }
 
@@ -439,6 +440,9 @@ a {
         text-align: center;
 
     }
+    .lg-pt-50{
+        padding-top: 50px;
+    }
 
 }
 
@@ -449,5 +453,18 @@ a {
         padding-right: 12px;
         display: flex;
     }
+    .five-star{
+        flex-direction: column;
+    }
+    .custam {
+        bottom: 0;
+        right: 0;
+    }
 
+}
+@media (max-width:1200px) {
+    .xl-pb-100{
+        padding-bottom: 100px;
+    }
+    
 }
