--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,11 +9,17 @@
     box-sizing: border-box;
     list-style: none;
     scroll-behavior: smooth;
+    transition: all 300ms linear;
 
 }
 
 a {
     text-decoration: none;
+
+}
+
+.cursor {
+    cursor: pointer;
 }
 
 
@@ -24,16 +30,16 @@ section header nav h1 span {
     font-weight: 200;
     line-height: 30.16px;
     letter-spacing: -0.02em;
-    text-align: left;
+
 }
 
-.chat {
+.logo-text {
     font-family: "Poppins", sans-serif;
     font-size: 26px;
     font-weight: 600;
     line-height: 30.16px;
     letter-spacing: -0.02em;
-    text-align: left;
+
 
 }
 
@@ -50,8 +56,7 @@ nav ul li a {
 
 .bg-color {
     background-color: #1E71FF;
-    width: 100%;
-    height: 100%;
+
 }
 
 
@@ -83,12 +88,13 @@ nav h1 {
     color: white;
 }
 
-.try-it {
+.try-it-button,
+.get-a-button {
     width: 172px;
     height: 50px;
     border-radius: 60px;
     border: 1px solid #FFFFFF;
-    background-color: #1E71FF;
+    background-color: transparent;
     font-family: "Poppins", sans-serif;
     font-size: 16px;
     font-weight: 500;
@@ -98,17 +104,17 @@ nav h1 {
 
 }
 
-.try-it-free:hover {
+.try-it-button:hover {
     background-color: white;
     color: #1E71FF;
 }
 
-.Demo:hover {
+.get-a-button:hover {
     background-color: white;
     color: #1E71FF;
 }
 
-.have {
+.hero-section-sub-header {
     font-family: "Poppins", sans-serif;
     font-size: 75px;
     font-weight: 600;
@@ -118,13 +124,13 @@ nav h1 {
     color: white;
 }
 
-.dote-1 {
+.dote-img-1 {
     top: 3.5%;
     left: 4%;
     z-index: -1;
 }
 
-.dote-2 {
+.dote-img-2 {
     bottom: 18%;
     right: 4%;
     z-index: -1;
@@ -142,10 +148,7 @@ nav h1 {
     margin-top: 60px;
 }
 
-.font-15 {
-    color: white;
 
-}
 
 
 .mb-30 {
@@ -180,7 +183,8 @@ section .container .row .col-6 a {
     left: 0px;
 }
 
-.tab {
+.get-a-sm-button,
+.try-it-sm-button {
     width: 167px;
     height: 50px;
     border-radius: 60px;
@@ -191,8 +195,10 @@ section .container .row .col-6 a {
     font-weight: 500;
     line-height: 19.92px;
     text-align: center;
-
+    background-color: transparent;
 }
+
+
 
 .line {
     width: 167px;
@@ -202,13 +208,14 @@ section .container .row .col-6 a {
 
 
 
-.it-free:hover {
+.get-a-sm-button:hover,
+.try-it-sm-button:hover {
     background-color: #1E71FF;
     color: white;
 
 }
 
-.bus-52 {
+.five-star-bold {
 
     font-family: "Poppins", sans-serif;
     font-size: 18px;
@@ -264,7 +271,6 @@ section .container .row .col-6 a {
     font-weight: 200;
     line-height: 30.16px;
     letter-spacing: -0.02em;
-    text-align: left;
     color: #1E71FF;
 
 }
@@ -273,7 +279,7 @@ section .container .row .col-6 a {
 
 section .container .row .col-3 .d-flex a {
     color: #1888ea;
-    z-index: 10;
+
 }
 
 section .container .row .col-3 .box .footer-fonts {
@@ -289,10 +295,7 @@ section .container .row .col-3 .box .footer-fonts {
 }
 
 
-a {
-    line-height: 163%;
-    font-size: 13px;
-}
+
 
 .custam {
     bottom: 70px;
@@ -305,7 +308,7 @@ a {
     min-height: 50vh;
 }
 
-.top50 {
+.top-6 {
     top: 6%;
 }
 
@@ -331,9 +334,8 @@ a {
 
 
 @media (max-width:768px) {
-    .lg-view {
+    .nav-mobile-viwe {
         flex-direction: column;
-
         width: 100%;
         height: 100%;
         justify-content: center;
@@ -347,9 +349,7 @@ a {
     }
 
 
-    .ml407 {
-        margin-right: 0;
-    }
+
 
     label[for="menubar"] {
         width: 30px;
@@ -368,46 +368,32 @@ a {
         z-index: 5;
     }
 
-    input[type="checkbox"]:checked~.lg-view {
+    input[type="checkbox"]:checked~.nav-mobile-viwe {
         right: 0;
     }
 
-    .font-50 {
+    .font-size-50 {
         font-size: 50px;
     }
 
-    .font-15 {
+    .font-size-15 {
         font-size: 15px;
     }
 
-    .w-md-100 {
-        width: 100%;
-        position: none;
-    }
-
-    .buts {
-        flex-direction: column;
+    .mb-10 {
         margin-bottom: 10px;
     }
 
-    .footer-h1 {
-        font-family: "Poppins", sans-serif;
-        font-size: 26px;
-        font-weight: 600;
-        line-height: 30.16px;
-        letter-spacing: -0.02em;
-        text-align: left;
-        color: #1E71FF;
-
-    }
 
 
 
     .pos-unset {
         position: unset !important;
-        width: 100% !important;
     }
 
+    .w-md-100 {
+        width: 100% !important;
+    }
 
     section .container .row .col-3 .d-flex a {
         color: blue;
@@ -416,7 +402,7 @@ a {
 }
 
 @media (max-width: 992px) {
-    .it-free {
+    .try-it-sm-button {
         margin: 0;
         padding: 0;
         margin-bottom: 10px;
@@ -424,10 +410,13 @@ a {
 
     .pos-unset {
         position: unset !important;
+    }
+
+    .w-lg-100 {
         width: 100% !important;
     }
 
-    .tac {
+    .text-lg-center {
         text-align: center;
     }
 
@@ -440,31 +429,30 @@ a {
         text-align: center;
 
     }
-    .lg-pt-50{
+
+    .lg-pt-50 {
         padding-top: 50px;
     }
 
 }
 
 @media (max-width:568px) {
-    .col-3 {
-        width: 50%;
-        padding-left: 12px;
-        padding-right: 12px;
-        display: flex;
-    }
-    .five-star{
+   
+
+    .five-star {
         flex-direction: column;
     }
+
     .custam {
         bottom: 0;
         right: 0;
     }
 
 }
+
 @media (max-width:1200px) {
-    .xl-pb-100{
+    .xl-pb-100 {
         padding-bottom: 100px;
     }
-    
+
 }
